fnished version of anger counter in 125% size

--- a/index.css
+++ b/index.css
@@ -35,13 +35,14 @@ button.increment-btn-section{
     opacity: 0.5;
 }
 
-#save-btn{
-    background-color: lightgreen;
+button.save-btn-section{
+    background-color: darkgreen;
 }
 
 h2 {
     font-size: 50px;
 }
-
-
+.save-class{
+    font-size: 30px;
+}
 
